pre-feedback, JAN01

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151774559-1"></script>
     <script>
@@ -14,17 +15,16 @@
 
 
     <meta charset="utf-8">
-    <title>Ryan Bolick</title>
+    <title>Ryan's Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="UI/UX designer who codes.">
+    <meta name="description" content="See how Ryan Bolick works through his writings and case studies.">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="assets/css/theme-event.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="preload" as="font" href="assets/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="assets/fonts/Inter-UI.var.woff2" type="font/woff2" crossorigin="anonymous">
 
-    <meta http-equiv=“Pragma” content=”no-cache”>
-    <meta http-equiv=“Expires” content=”-1″>
-    <meta http-equiv=“CACHE-CONTROL” content=”NO-CACHE”>
+
+  <meta name="viewport" content="width=device-width">
 
   </head>
 
@@ -34,7 +34,7 @@
     </div>
 
     <div class="navbar-container">
-      <nav class="navbar navbar-expand-lg justify-content-between navbar-dark bg-primary-3 border-bottom-0" data-sticky="top">
+      <nav class="navbar navbar-expand-lg  justify-content-between navbar-dark bg-dark" data-sticky="top">
         <div class="container">
           <div class="col flex-fill px-0 d-flex justify-content-between">
               <a href="index.html" aria-expanded="false" aria-haspopup="true" style="color:white">Ryan Bolick</a>
@@ -61,108 +61,57 @@
       </nav>
     </div>
 
-    <section class="bg-primary-3 text-light">
-      <div class="container mt-lg-6">
-        <div class="row">
-          <div class="col">
-            <h1 class="display-3">Hello, I'm Ryan,<br>A UI/UX designer who codes. <br></h1>
-              <br>
 
-            <div class="">
-              <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#subscribe-modal">
-                Want me on your team?
-              </button>
-              <div class="modal fade" id="subscribe-modal" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                  <div class="modal-content">
-                    <div class="modal-body">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <img class="icon bg-dark" src="assets/img/icons/interface/cross.svg" alt="cross interface icon" data-inject-svg />
-                      </button>
-                      <div class="m-xl-4 m-3 text-dark">
-                        <div class="text-center mb-4">
-                          <h4 class="h1 mb-1 text-dark">Get in touch.</h4>
-                          <p>Just use any method below. Thanks!</p>
-                        </div>
-                            <p style="color:black">Phone: <a href="tel:+1-919-930-4727" style="color:black">919.930.4727</a></p>
-                            <p style="color:black">Email: <a href="mailto:ryanjbolick@gmail.com" target="blank" style="color:black">ryanjbolick@gmail.com</a></p>
-                            <p style="color:#091733">Twitter: <a href="https://twitter.com/uiuxguy" target="blank" style="color:black">@uiuxguy</a></p>
-                            <p style="color:#091733">LinkedIn: <a href="https://www.linkedin.com/in/rjbolick/" target="blank" style="color:black">rjbolick</a></p>
-                        </div>
+    <section class="has-divider text-light jarallax bg-dark" data-jarallax data-speed="0.5" data-overlay>
+      <img src="assets/img/article-9.jpg" alt="" class="jarallax-img opacity-50">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-5 col-lg-6 col-md-8">
+            <h1 class="display-4">Blog</h1>
+            <p class="lead mb-0">Here's where I write about my interests and dive deeper into some projects.</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <section data-overlay>
+      <div class="container">
+        <div class="row mb-4">
+          <div class="col-md-8 col-lg-9">
+
+            <div class="pr-lg-4">
+              <div class="card card-article-wide flex-md-row no-gutters">
+                <a href="mindfulrunning.html" class="col-md-4">
+                  <img src="assets/img/n1graph.png" alt="Image" class="card-img-top">
+                </a>
+                <div class="card-body d-flex flex-column col-auto p-4">
+                  <div class="d-flex justify-content-between mb-3">
+                    <div class="text-small d-flex">
+                      <span class="text-muted">18 December 2019</span>
+                    </div>
+                  </div>
+                  <a href="mindfulrunning.html" class="flex-grow-1">
+                    <h3>Did it work? A skeptic's journey testing the Focus Pack.</h3>
+                  </a>
+                  <div class="d-flex align-items-center mt-3">
+                    <img src="assets/img/ryan1.jpg" alt="Image" class="avatar avatar-sm">
+                    <div class="ml-1">
+                      <span class="text-small text-muted">By</span>
+                      <span class="text-small">Ryan Bolick</span>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-          </div>
-        </div>
-      </div>
     </section>
-
-    <section class="bg-primary-3 text-light">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col mb-4">
-              <div class="row">
-                <div class="col">
-                  <a href="focuspack.html" class="card card-article-wide flex-md-row no-gutters hover-shadow-3d bg-dark">
-                    <div class="col-md-5 col-lg-6">
-                      <img src="assets/img/portfolio-item-banner-a.png" class="card-img-top">
-                    </div>
-                    <div class="card-body d-flex flex-column justify-content-between col-auto p-4 p-lg-5">
-                      <div>
-                        <div class="h2">The Focus Pack</div>
-                        <div class="h2">for <span><img src="assets/img/logos/strava_logo_white.svg" alt="Strava" class="icon mr-1"></span> </div>
-                      </div>
-                      <p class="lead mb-0 font-weight-bold">Your fitness journey, mindfully.</p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-lg-4 mb-4">
-            <a href="shyft.html">
-              <img src="assets/img/portfolio-item-1.png" class="rounded mb-3">
-            </a>
-            <a href="shyft.html">
-              <h4 class="mb-1">Shyft</h4>
-              <div class="text-small text-muted">Ground-up</div>
-            </a>
-          </div>
-          <div class="col-sm-6 col-lg-4 mb-4">
-            <a href="scorereport.html">
-              <img src="assets/img/portfolio-item-2.png" class="rounded mb-3">
-            </a>
-            <a href="scorereport.html">
-              <h4 class="mb-1">Score Report</h4>
-              <div class="text-small text-muted">Data Analytics</div>
-            </a>
-          </div>
-          <div class="col-sm-6 col-lg-4 mb-4">
-            <a href="transloc.html">
-              <img src="assets/img/portfolio-item-3.png" class="rounded mb-3">
-            </a>
-            <a href="transloc.html">
-              <h4 class="mb-1">Transit App</h4>
-              <div class="text-small text-muted">Redesign</div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
 
     <footer class="pb-5 bg-primary-3 text-light">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-xs-11 col-lg-6">
+          <div class="col-md-6 col-xs-12">
             <div class="h1">Interested in collaborating?</div>
+            <div class="">
               <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#subscribe-modal">
                 Let's create together
               </button>
@@ -178,16 +127,15 @@
                           <h4 class="h1 mb-1" style="color:#091733">Get in touch.</h4>
                           <p style="color:#091733">Just use any method below. Thanks!</p>
                       </div>
-                          <p style="color:black">Phone: <a href="tel:+1-919-930-4727" style="color:black">919.930.4727</a></p>
-                          <p style="color:black">Email: <a href="mailto:ryanjbolick@gmail.com" target="blank" style="color:black">ryanjbolick@gmail.com</a></p>
-                          <p style="color:#091733">Twitter: <a href="https://twitter.com/uiuxguy" target="blank" style="color:black">@uiuxguy</a></p>
-                          <p style="color:#091733">LinkedIn: <a href="https://www.linkedin.com/in/rjbolick/" target="blank" style="color:black">rjbolick</a></p>
+                          <p style="color:#091733">@uiuxguy</p>
+                          <p style="color:#091733">919.930.4727</p>
+                          <p style="color:#091733">ryanjbolick@gmail.com</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-
+            </div>
           </div>
         </div>
 
@@ -212,24 +160,23 @@
               <div class="col-6 col-lg-4 col-xl-4">
                 <h5>Contact</h5>
                 <ul class="nav flex-column">
-                  <li class="nav-link">
-                    Phone: <a href="tel:+1-919-930-4727">919.930.4727</a>
+                  <li class="nav-item">
+                    <a href="https://twitter.com/uiuxguy" class="nav-link" target="blank">twitter: @uiuxguy</a>
                   </li>
                   <li class="nav-link">
-                    Email: <a href="mailto:ryanjbolick@gmail.com" target="blank">ryanjbolick@gmail.com</a>
+                    phone: 919.930.4727
                   </li>
                   <li class="nav-link">
-                    Twitter: <a href="https://twitter.com/uiuxguy"target="blank">@uiuxguy</a>
-                  </li>
-                  <li class="nav-link">
-                    LinkedIn: <a href="https://www.linkedin.com/in/rjbolick/" target="blank">rjbolick</a>
+                    email: ryanjbolick@gmail.com
                   </li>
                 </ul>
               </div>
           </div>
 
-        <div class="row text-center">
-          <div class="col-12 mt-5">
+
+
+        <div class="row justify-content-center">
+          <div class="col-5 mt-5">
             <p class="text-muted" style="font-weight:lighter">Designed and coded by Ryan Bolick. ©2019</p>
           </div>
         </div>
@@ -237,6 +184,11 @@
     </footer>
 
 
+
+
+    <a href="#" class="btn back-to-top btn-primary btn-round" data-smooth-scroll data-aos="fade-up" data-aos-offset="2000" data-aos-mirror="true" data-aos-once="false">
+      <img class="icon" src="assets/img/icons/theme/navigation/arrow-up.svg" alt="arrow-up icon" data-inject-svg />
+    </a>
     <!-- Required vendor scripts (Do not remove) -->
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/popper.min.js"></script>
