--- a/scorereport.html
+++ b/scorereport.html
@@ -13,9 +13,9 @@
     </script>
 
     <meta charset="utf-8">
-    <title>Transit App Refresh</title>
+    <title>ACT Score Report</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Transit. Redesigned.">
+    <meta name="description" content="Understand your score">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="preload" as="font" href="assets/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
@@ -69,6 +69,7 @@
       font-weight: bold;
       text-align: left;
       padding-left: 5vw;
+      padding-right: 2vw;
     }
       @media (max-width: 360px) {
         p.detail-left {
@@ -187,8 +188,9 @@
               img.image-left {
                 width: auto;
                 max-height: 80vh;
-                padding-left:0vw;
+                padding-left:5vw;
                 padding-top:2vh;
+                padding-right:5vw
               }
             }
 
@@ -196,8 +198,9 @@
               img.image-left {
                 width: auto;
                 max-height: 80vh;
-                padding-left:3.5vw;
-                padding-top:1vh;
+                padding-left:5vw;
+                padding-top:3vh;
+                padding-right:5vw
               }
             }
 
@@ -211,7 +214,6 @@
             }
             @media (min-width: 1200px) {
               img.first {
-                max-height: 5vw;
                 width: auto;
                 max-height: 80vh;
                 margin-top: 5vh; margin-bottom: 5vh;
@@ -303,28 +305,28 @@
             <div class="row justify-content-center sticky-top">
               <div class="col-11">
                 <div class="mb-4">
-                  <h1>Transit App Refresh</h1>
+                  <h1>ACT Score Report</h1>
                     <dl class="row">
                       <dt class="col-3 mb-1">Role</dt>
                       <dd class="col-9 mb-1">UX Designer, User Researcher</dd>
-                      <dt class="col-3 mb-1">Client</dt>
-                      <dd class="col-9 mb-1">North Carolina State University</dd>
+                      <dt class="col-3 mb-1">Company</dt>
+                      <dd class="col-9 mb-1">Mindspire Test Prep</dd>
                       <dt class="col-3 mb-1">Year</dt>
                       <dd class="col-9 mb-1">2019</dd>
                       <dt class="col-3 mb-1">Type</dt>
-                      <dd class="col-9 mb-1">Redesign</dd>
+                      <dd class="col-9 mb-1">Data Analytics</dd>
                       </dd>
                     </dl>
                   <h5>Background</h5>
                     <p>
-                      Public transportation offers many benefits for those living in congested areas like a city or college campus. When the route is well known, everything usually goes smoothly. However, what if your bus was late or you were visiting a new city? You might feel lost. Transloc<small><sup>&reg;</sup></small> is an existing app owned by Ford, and this graduate project served to explore potential improvements to Transloc's<small><sup>&reg;</sup></small> user experience.
+                      Mindspire Test Prep offers premier tutoring services for nearly any subject or test, including the ACT. Each student takes a practice test at the start of tutoring to establish a baseline, which informs the tutor’s plan of work and helps the student visualize goals. Mindspire’s existing ACT practice test report was not being utilized because of poor UI and UX, leading to difficult onboarding of new students and even loss of market share.
                     </p>
                   <h5>Solution</h5>
                     <p>
-                      The redesign of Transloc<small><sup>&reg;</sup></small> was centered around simplifying the user experience and improving education of features. Tabs were more clearly defined and only the most used ones were kept (5 to 3). Reachability was improved by moving these tabs from top to the bottom of the screen. An informative onboarding experience was developed to inform users of all primary features.
+                      I overhauled Mindspire’s practice test reporting system from Excel reports to Tableau visualizations, which required restructuring and coding all data collection methods. Information that spanned over 5 pages was thoughtfully condensed into a single screen dashboard. New features like test prediction, area of opportunity, and percentile statistics were also added.
                   <h5>Outcomes</h5>
                     <p>
-                      This project was delivered to faculty and students at North Carolina State University and employees of Lexis Nexis. Experts in the field were complementary of the changes made and improved usability of Transloc<small><sup>&reg;</sup></small>.
+                      This report is currently being used at Mindspire and has drastically reduced the time needed to generate one. After teaching several members of the east coast team at Tableau how to make and use the visualization, it now serves as a training aid at the company.
                     </p>
                 </div>
 
@@ -332,10 +334,10 @@
                 <div class="d-flex align-items-center">
                   <span class="text-small mr-1">Share:</span>
                   <div class="d-flex mx-2">
-                    <a href="https://twitter.com/intent/tweet?text=https://www.ryanbolick.com/transloc.html%20@uiuxguy%20" target="_blank" class="nav-link">
+                    <a href="https://twitter.com/intent/tweet?text=https://www.ryanbolick.com/scorereport.html%20@uiuxguy%20" target="_blank" class="nav-link">
                       <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/twitter.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Twitter icon</title><path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z"></path></svg>
                     </a>
-                      <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ryanbolick.com%2Ftransloc.html&amp;src=sdkpreparse" target="_blank" class="nav-link">
+                      <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ryanbolick.com%2Fscorereport.html&amp;src=sdkpreparse" target="_blank" class="nav-link">
                         <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/facebook.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Facebook icon</title><path d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.408.593 24 1.324 24h11.494v-9.294H9.689v-3.621h3.129V8.41c0-3.099 1.894-4.785 4.659-4.785 1.325 0 2.464.097 2.796.141v3.24h-1.921c-1.5 0-1.792.721-1.792 1.771v2.311h3.584l-.465 3.63H16.56V24h6.115c.733 0 1.325-.592 1.325-1.324V1.324C24 .593 23.408 0 22.676 0"></path></svg>
                       </a>
                   </div>
@@ -346,70 +348,65 @@
 
 <!-- hero shots -->
 
-        <div class="col-sm-12 col-xl-8 order-xl-1" style="background-color:#235DCC" align="middle">
+        <div class="col-sm-12 col-xl-8 order-xl-1" style="background-color:#477d85" >
 
-          <img class="first" src="assets/img/transloc-1.png">
+          <div class="row justify-content-center">
+            <div class="col-xl-12">
+              <img class="image-left" src="assets/img/mindspire-1.png">
+            </div>
+          </div>
 
-            <p class="heading">onboarding</p>
+          <p class="heading">discover your trends</p>
+          <p class="detail-left">8 unique and powerful visualizations.</p>
+          <p class="detail-left" style="color:#1C3236">See how you test.</p>
+          <div class="row">
+            <div class="col-xl-11">
+              <img class="image-left" src="assets/img/mindspire-2.png">
+            </div>
+          </div>
+
+            <p class="heading">predicting success</p>
             <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-7 order-xl-12">
-                <p class="detail-right">for the first time ever in Transloc<small><sub>&reg;</sub></small></p>
-                <p class="detail-right" style="color:#091733">clear and informative</p>
+              <div class="col-sm-12 col-xl-12">
+                <p class="detail-left">Don't waste time on the wrong test.</p>
+                <p class="detail-left" style="color:#1C3236">Personalized plans for the best score.</p>
               </div>
-              <div class="col-sm-12 col-xl-5 order-xl-1">
-                <img class="image-left" src="assets/img/transloc-2.gif">
+              <div class="col-md-10">
+                <img class="image-left" src="assets/img/mindspire-3.png">
               </div>
             </div>
 
-            <p class="heading">homescreen</p>
-            <p class="detail-left">new and improved features</p>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-5">
-                <p class="detail-left" style="color:#091733">reachability</p>
-                <p class="detail-left" style="color:#091733">search bar</p>
-                <p class="detail-left" style="color:#091733">nav tray</p>
-                <p class="detail-left" style="color:#091733">weather</p>
-                <br>
+            <p class="heading">report with depth</p>
+            <p class="detail-left">More data with less distractions.</p>
+            <p class="detail-left" style="color:#1C3236">Hover to get a detailed look.</p>
+            <div class="row" align="left">
+              <div class="col-12">
+                <img class="image-left" src="assets/img/mindspire-4-1.png">
               </div>
-              <div class="col-sm-12 col-xl-3">
-                <img src="assets/img/transloc-3-1.png" alt="Image" style="width: auto; max-height: 50vh; margin: 10px 0px">
-                <p class="figure-label">original</p>
+              <div class="col-12">
+                <img class="image-left" src="assets/img/mindspire-4-2.png">
               </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/transloc-3-2.png" alt="Image" style="width: auto; max-height: 70vh; margin: 5vmin 0px 10px 0px">
-                <p class="figure-label">refreshed</p>
-              </div>
-            </div>
-
-            <p class="heading">choosing routes</p>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-7 order-xl-12">
-                <p class="detail-right">a streamlined experience</p>
-                <p class="detail-right" style="color:#091733">fewer screens</p>
-                <p class="detail-right" style="color:#091733">preview route</p>
-              </div>
-              <div class="col-sm-12 col-xl-5 order-xl-1">
-                <img class="image-left" src="assets/img/transloc-3.gif">
-              </div>
-            </div>
-
-            <p class="heading">favorites</p>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-4">
-                <br>
-                <p class="detail-left">route groups</p>
-                <p class="detail-left">quick editing</p>
-              </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/transloc-4-1.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/transloc-4-2.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
+              <div class="col-12">
+                <img class="image-left" src="assets/img/mindspire-4-3.png">
               </div>
             </div>
 
 
-            <img src="assets/img/transloc-5.png" alt="Image" style="margin: 30vh 0vh; width:auto; max-height:40vh;">
+            <p class="heading">simplicity</p>
+            <p class="detail-left">See all your data on one page.</p>
+            <p class="detail-left" style="color:#1C3236">No negative red colors.</p>
+            <div class="row">
+              <div class="col-xl-8">
+                <img class="image-left" src="assets/img/mindspire-5.gif">
+                <p class="figure-label"><span style="color:#1C3236">original:</span> 5 pages. less data.</p>
+              </div>
+            </div>
+            <div class="row ">
+              <div class="col-xl-8 mb-5">
+                <img class="image-left" src="assets/img/mindspire-1.png">
+                <p class="figure-label"><span style="color:#1C3236">updated:</span> 1 page. more data.</p>
+              </div>
+            </div>
 
           </div>
         </div>
