--- a/shyft.html
+++ b/shyft.html
@@ -11,10 +11,11 @@
 
       gtag('config', 'UA-151774559-1');
     </script>
+
     <meta charset="utf-8">
     <title>Shyft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A corporate Bootstrap theme by Medium Rare">
+    <meta name="description" content="A new way to rideshare">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="preload" as="font" href="assets/fonts/Inter-UI-upright.var.woff2" type="font/woff2" crossorigin="anonymous">
@@ -231,51 +232,54 @@
       <div class="loading-animation"></div>
     </div>
 
-  <!-- navbar -->
-
-  <div class="navbar-container ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-          <div class="container">
-            <div class="col flex-fill px-0 d-flex justify-content-between">
-                <a href="index.html" aria-expanded="false" aria-haspopup="true" style="color:grey">Ryan Bolick</a>
-            </div>
-            <div class="collapse navbar-collapse justify-content-end col px-0 px-lg-2 flex-fill">
-              <div class="py-2 py-lg-0">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                    <a href="index.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a href="index.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Projects</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a href="index.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">About</a>
-                  </li>
-                </ul>
+    <!-- navbar -->
+    <div class="navbar-container ">
+          <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container">
+              <div class="col flex-fill px-0 d-flex justify-content-between">
+                  <a href="index.html" aria-expanded="false" aria-haspopup="true" style="color:grey">Ryan Bolick</a>
               </div>
-            </div>
-        </div>
-      </nav>
-    </div>
+              <div class="collapse navbar-collapse justify-content-end col px-0 px-lg-2 flex-fill">
+                <div class="py-2 py-lg-0">
+                  <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                      <a href="index.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a href="comingsoon.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Projects</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a href="comingsoon.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a href="blog.html" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Blog</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+          </div>
+        </nav>
+      </div>
+
 
 
     <section class="pt-0 pb-0">
       <div class="alt-grid">
         <div class="row no-gutters">
-          <div class="col-sm-12 col-xl-4 pt-5 order-xl-2 mb-5">
+          <div class="col-sm-12 col-xl-4 order-xl-2 mt-2 mb-3">
             <div class="row justify-content-center sticky-top">
               <div class="col-11">
                 <div class="mb-4">
                   <h1>Shyft</h1>
                     <dl class="row">
-                      <dt class="col-3 mb-2">Role</dt>
-                      <dd class="col-9 mb-2">UX Designer, User Researcher</dd>
-                      <dt class="col-3 mb-2">Client</dt>
-                      <dd class="col-9 mb-2">Elder Innovators of the Triangle</dd>
-                      <dt class="col-3 mb-2">Year</dt>
-                      <dd class="col-9 mb-2">2019</dd>
-                      <dt class="col-3 mb-2">Industry</dt>
-                      <dd class="col-9 mb-2">Technnology</dd>
+                      <dt class="col-3 mb-1">Role</dt>
+                      <dd class="col-9 mb-1">UX Designer, User Researcher</dd>
+                      <dt class="col-3 mb-1">Client</dt>
+                      <dd class="col-9 mb-1">Elder Innovators of the Triangle</dd>
+                      <dt class="col-3 mb-1">Year</dt>
+                      <dd class="col-9 mb-1">2019</dd>
+                      <dt class="col-3 mb-1">Type</dt>
+                      <dd class="col-9 mb-1">Ground-up design</dd>
                       </dd>
                     </dl>
                   <h5>Background</h5>
@@ -296,15 +300,12 @@
                 <div class="d-flex align-items-center">
                   <span class="text-small mr-1">Share:</span>
                   <div class="d-flex mx-2">
-                    <a href="#" class="btn btn-round btn-primary mx-1">
-                      <img class="icon icon-sm" src="assets/img/icons/social/twitter.svg" alt="twitter social icon" data-inject-svg />
+                    <a href="https://twitter.com/intent/tweet?text=https://www.ryanbolick.com/shyft.html%20@uiuxguy%20" target="_blank" class="nav-link">
+                      <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/twitter.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Twitter icon</title><path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z"></path></svg>
                     </a>
-                    <a href="#" class="btn btn-round btn-primary mx-1">
-                      <img class="icon icon-sm" src="assets/img/icons/social/facebook.svg" alt="facebook social icon" data-inject-svg />
-                    </a>
-                    <a href="#" class="btn btn-round btn-primary mx-1">
-                      <img class="icon icon-sm" src="assets/img/icons/social/linkedin.svg" alt="linkedin social icon" data-inject-svg />
-                    </a>
+                      <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ryanbolick.com%2Fshyft.html&amp;src=sdkpreparse" target="_blank" class="nav-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/facebook.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Facebook icon</title><path d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.408.593 24 1.324 24h11.494v-9.294H9.689v-3.621h3.129V8.41c0-3.099 1.894-4.785 4.659-4.785 1.325 0 2.464.097 2.796.141v3.24h-1.921c-1.5 0-1.792.721-1.792 1.771v2.311h3.584l-.465 3.63H16.56V24h6.115c.733 0 1.325-.592 1.325-1.324V1.324C24 .593 23.408 0 22.676 0"></path></svg>
+                      </a>
                   </div>
                 </div>
               </div>
@@ -422,83 +423,88 @@
           </div>
         </div>
       </div>
-<!-- the process -->
-
-
-<!--
     </section>
-    <section class="bg-primary-alt">
-      <div class="container">
-        <div class="row mb-4">
-          <div class="col">
-            <h3 class="h2">The Process</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6 col-xl-4 mb-4">
-            <a href="#">
-              <img src="assets/img/portfolio-item-3.jpg" alt="Beker EV" class="rounded mb-3">
-              <h4 class="mb-1">Beker EV</h4>
-              <div class="text-small text-muted">Art Direction</div>
-            </a>
-          </div>
-          <div class="col-sm-6 col-xl-4 mb-4">
-            <a href="#">
-              <img src="assets/img/portfolio-item-2.jpg" alt="Oculus Go" class="rounded mb-3">
-              <h4 class="mb-1">Oculus Go</h4>
-              <div class="text-small text-muted">Branding</div>
-            </a>
-          </div>
-          <div class="col-sm-6 col-xl-4 mb-4">
-            <a href="#">
-              <img src="assets/img/portfolio-item-1.jpg" alt="Leap iOS" class="rounded mb-3">
-              <h4 class="mb-1">Leap iOS</h4>
-              <div class="text-small text-muted">Digital</div>
-            </a>
-          </div>
-        </div>
-      </div>
-    -->
 
 
-<!-- footer -->
 
-    </section>
     <footer class="pb-5 bg-primary-3 text-light">
       <div class="container">
-        <div class="row mb-4">
-          <div class="col">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="index.html#" class="nav-link">
-                  <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/instagram.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Instagram icon</title><path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"></path></svg>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="index.html#" class="nav-link">
-                  <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/twitter.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Twitter icon</title><path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z"></path></svg>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="index.html#" class="nav-link">
-                  <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/youtube.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>YouTube icon</title><path class="a" d="M23.495 6.205a3.007 3.007 0 0 0-2.088-2.088c-1.87-.501-9.396-.501-9.396-.501s-7.507-.01-9.396.501A3.007 3.007 0 0 0 .527 6.205a31.247 31.247 0 0 0-.522 5.805 31.247 31.247 0 0 0 .522 5.783 3.007 3.007 0 0 0 2.088 2.088c1.868.502 9.396.502 9.396.502s7.506 0 9.396-.502a3.007 3.007 0 0 0 2.088-2.088 31.247 31.247 0 0 0 .5-5.783 31.247 31.247 0 0 0-.5-5.805zM9.609 15.601V8.408l6.264 3.602z"></path></svg>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="index.html#" class="nav-link">
-                  <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" class="injected-svg icon undefined" data-src="assets/img/icons/social/facebook.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Facebook icon</title><path d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.408.593 24 1.324 24h11.494v-9.294H9.689v-3.621h3.129V8.41c0-3.099 1.894-4.785 4.659-4.785 1.325 0 2.464.097 2.796.141v3.24h-1.921c-1.5 0-1.792.721-1.792 1.771v2.311h3.584l-.465 3.63H16.56V24h6.115c.733 0 1.325-.592 1.325-1.324V1.324C24 .593 23.408 0 22.676 0"></path></svg>
-                </a>
-              </li>
-            </ul>
+        <div class="row justify-content-center">
+          <div class="col-xs-11 col-lg-7">
+            <div class="h1">Interested in collaborating?</div>
+              <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#subscribe-modal">
+                Let's create together
+              </button>
+              <div class="modal fade" id="subscribe-modal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <img class="icon bg-dark" src="assets/img/icons/interface/cross.svg" alt="cross interface icon" data-inject-svg />
+                      </button>
+                      <div class="m-xl-4 m-3">
+                        <div class="text-center mb-4">
+                          <h4 class="h1 mb-1" style="color:#091733">Get in touch.</h4>
+                          <p style="color:#091733">Just use any method below. Thanks!</p>
+                      </div>
+                          <p style="color:black">Phone: <a href="tel:+1-919-930-4727" style="color:black">919.930.4727</a></p>
+                          <p style="color:black">Email: <a href="mailto:ryanjbolick@gmail.com" target="blank" style="color:black">ryanjbolick@gmail.com</a></p>
+                          <p style="color:#091733">Twitter: <a href="https://twitter.com/uiuxguy" target="blank" style="color:black">@uiuxguy</a></p>
+                          <p style="color:#091733">LinkedIn: <a href="https://www.linkedin.com/in/rjbolick/" target="blank" style="color:black">rjbolick</a></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
           </div>
         </div>
-        <div class="row">
-          <div class="col-auto">
-            <small class="text-muted">Made with ♥ by Ryan Bolick. ©2019 All Rights Reserved.</small>
+
+            <div class="row justify-content-center mt-5">
+              <div class="col-5 col-lg-3 col-xl-2">
+                <h5>Navigate</h5>
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="comingsoon.html" class="nav-link">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="comingsoon.html" class="nav-link">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="blog.html" class="nav-link">Blog</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-6 col-lg-4 col-xl-4">
+                <h5>Contact</h5>
+                <ul class="nav flex-column">
+                  <li class="nav-link">
+                    Phone: <a href="tel:+1-919-930-4727">919.930.4727</a>
+                  </li>
+                  <li class="nav-link">
+                    Email: <a href="mailto:ryanjbolick@gmail.com" target="blank">ryanjbolick@gmail.com</a>
+                  </li>
+                  <li class="nav-link">
+                    Twitter: <a href="https://twitter.com/uiuxguy"target="blank">@uiuxguy</a>
+                  </li>
+                  <li class="nav-link">
+                    LinkedIn: <a href="https://www.linkedin.com/in/rjbolick/" target="blank">rjbolick</a>
+                  </li>
+                </ul>
+              </div>
+          </div>
+
+        <div class="row text-center">
+          <div class="col-12 mt-5">
+            <p class="text-muted" style="font-weight:lighter">Designed and coded by Ryan Bolick. ©2019</p>
           </div>
         </div>
       </div>
     </footer>
+
 
 
     <a href="#" class="btn back-to-top btn-primary btn-round" data-smooth-scroll data-aos="fade-up" data-aos-offset="2000" data-aos-mirror="true" data-aos-once="false">
