--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="containernarrow mt-lg-3">
     <!-- <div class="card card-body justify-content-between bg-white"> -->
     <div class="justify-content-left mb-0">
-      <img src="assets/img/memojiTransparent.png" alt="Image" class="rounded" style="max-height:8rem">
+      <img src="assets/img/memojiGrey.jpeg" alt="Image" class="rounded" style="max-height:8rem">
     </div>
         <div class="row px-2 pt-2 pb-5">
             <div class="hi" style="line-height:1">Ryan Bolick <span class="h2 mid mb-0">Interaction Designer</span> </div>
@@ -148,7 +148,7 @@
           <div class="col">
             <a href="nutrics" class="card card-article-wide flex-md-row no-gutters hover-shadow-sm bg-white">
               <div class="col-md-5 col-lg-6">
-                <img src="assets/img/nutrics_bg.png" class="card-img-top">
+                <img src="assets/img/nutrics_bg.jpeg" class="card-img-top">
               </div>
               <div class="card-body d-flex flex-column justify-content-between col-auto px-3 pt-4 py-3">
                 <div>
@@ -191,10 +191,10 @@
 
           <div class="col-md-6 col-lg-4">
             <a class="card hover-shadow-sm"  href="shyft">
-              <img src="assets/img/portfolio-item-1.png" alt="Image" class="card-img-top">
+              <img src="assets/img/shyft_bg.jpeg" alt="Image" class="card-img-top">
               <div class="card-body d-flex py-3 px-2 col-12">
                 <div class="d-flex">
-                    <img class="my-auto" src="assets/img/shyft-logo.png" height="50vh" width="auto" alt="">
+                    <img class="my-auto" src="assets/img/shyft_logo.jpeg" height="50vh" width="auto" alt="">
                     <h4 class="ml-2 my-auto cardtitle" style="line-height:1.4">Shyft<span class="br my-auto lead text-small low">Accessible ridesharing for seniors</span></h4>
                 </div>
               </div>
@@ -203,10 +203,10 @@
 
           <div class="col-md-6 col-lg-4">
             <a class="card hover-shadow-sm"  href="scorereport">
-              <img src="assets/img/portfolio-item-2.png" alt="Image" class="card-img-top">
+              <img src="assets/img/scoreReport_bg.jpeg" alt="Image" class="card-img-top">
               <div class="card-body d-flex py-3 px-2 col-12">
                 <div class="d-flex">
-                    <img class="my-auto" src="assets/img/mindspire-logo.png" height="50vh" width="auto" alt="">
+                    <img class="my-auto" src="assets/img/mindspire_logo.jpeg" height="50vh" width="auto" alt="">
                     <h4 class="ml-2 mb-0 cardtitle" style="line-height:1.4">Score Report<span class="br my-auto lead text-small low">Improving Mindspire's ACT report</span></h4>
                   </div>
               </div>
@@ -215,10 +215,10 @@
 
           <div class="col-md-6 col-lg-4">
             <a class="card hover-shadow-sm"  href="transloc">
-              <img src="assets/img/portfolio-item-3.png" alt="Image" class="card-img-top">
+              <img src="assets/img/transloc_bg.jpeg" alt="Image" class="card-img-top">
               <div class="card-body d-flex py-3 px-2 col-12">
                 <div class="d-flex">
-                    <img class="my-auto" src="assets/img/transloc-logo.png" height="50vh" width="auto" alt="">
+                    <img class="my-auto" src="assets/img/transloc_logo.jpeg" height="50vh" width="auto" alt="">
                     <h4 class="ml-2 my-auto cardtitle" style="line-height:1.4">Transit App<span class="br my-auto lead text-small low">Refreshing UI/UX of a transit app</span></h4>
                 </div>
               </div>
