--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="col">
                   <a href="focuspack" class="card card-article-wide flex-md-row no-gutters hover-shadow-sm bg-white">
                     <div class="col-md-5 col-lg-6">
-                      <img src="assets/img/strava_bg.jpg" class="card-img-top" height="50%" width="auto">
+                      <img src="assets/img/strava_bg.jpeg" class="card-img-top" height="50%" width="auto">
                     </div>
                     <div class="card-body d-flex flex-column justify-content-between col-auto px-3 pt-4 py-3">
                       <div>
