--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -148,32 +148,24 @@
             <h5 class="pt-3"><span class="low">While I write the case study, please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
             <h5 class="mt-1"><span class="low">Nutrics uses artificial intelligence to help you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span>.</h5>
             <h5 class="mt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
-
-
-              <span class="btn" style="padding-left:0px"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>This page optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></span>
-
-              <a href="#" class="btn btn-light ml-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>Try on<i class="fab fa-safari fa-lg" style="padding-left:.3em"></i>
-              <i class="fas fa-mobile-alt fa-lg pl-1 pr-1"></i></a>
+            <!-- <p><span class="low">Chrome on web is recommended. Safari will catch up eventually.</p> -->
 
         </div>
 
 
+        <div class="mt-1">
 
-        <div class="device device-iphone-x mx-auto" style="transform:scale(.7);">
-                    <div class="device-frame">
-                      <iframe class="device-content" width="375" height="812" mx-auto src="https://xd.adobe.com/embed/c744a994-3e6c-44b6-5d66-c5fecdb4b5f4-b175/?fullscreen" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                    <div class="device-stripe"></div>
-                    <div class="device-header"></div>
-                    <div class="device-sensors"></div>
-                    <div class="device-btns"></div>
-                    <div class="device-power"></div>
-                    <div class="device-home"></div>
-                  </div>
+          <a href="#" class="btn btn-light"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try on<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></a>
 
-        <!-- <div class="mx-auto text-center" style="transform:scale(.7)">
+          <a href="#" class="btn ml-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>This page optimized for<i class="fab fa-safari fa-lg" style="padding-left:.3em"></i>
+          <i class="fas fa-mobile-alt fa-lg pl-1 pr-1"></i></a>
+
+        </div>
+
+
+        <div class="mx-auto text-center" style="transform:scale(.7)">
           <iframe width="375" height="812" src="https://xd.adobe.com/embed/c744a994-3e6c-44b6-5d66-c5fecdb4b5f4-b175/?fullscreen" frameborder="0"></iframe>
-        </div> -->
+        </div>
 
 
         </div>
