--- a/nutrics.html
+++ b/nutrics.html
@@ -152,7 +152,7 @@
 
               <span class="btn" style="padding-left:0px"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>This page optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></span>
 
-              <a href="#" class="btn btn-light ml-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>Try on<i class="fas fa-mobile-alt fa-lg pl-1 pr-1"></i><i class="fab fa-safari fa-lg" style="padding-left:.3em"></i></a>
+              <a href="nutricsMobile" class="btn btn-light ml-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>Try on<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
         </div>
 
