--- a/nutrics.html
+++ b/nutrics.html
@@ -146,7 +146,7 @@
         <div class="row px-2 pt-5">
             <div class="hi2" style="line-height:1">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
             <h5 class="pt-3"><span class="low">While I write the case study, please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
-            <h5 class="mt-1"><span class="low">Nutrics uses artificial intelligence to help you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span>.</h5>
+            <h5 class="mt-1"><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence.</h5>
             <h5 class="mt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
 
 
