mobile layout optimization

--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -153,9 +153,12 @@
               <h5 class="pt-3"><span class="low">While I write the case study, please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
           </div>
 
-          <a href="nutrics" class="btn btn-light mr-4"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try on<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></a>
+          <a class="btn mr-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>This page optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.3em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
-          <a class="btn"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>This page optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.3em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
+
+          <a href="nutrics" class="btn btn-light"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try on<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></a>
+
+
 
         </div>
 
