--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -140,7 +140,7 @@
 
 
 
-    <section class="pt-5 pb-0">
+    <section class="pt-0 pb-0">
       <div class="containernarrow">
     <!-- <div class="card card-body justify-content-between bg-white"> -->
 
@@ -148,7 +148,7 @@
 
         <div class="mt-1">
 
-          <div class="row px-2 pt-5">
+          <div class="row px-2">
               <div class="hi2" style="line-height:1">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
               <h5 class="pt-3"><span class="low">While I write the case study, please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
           </div>
