--- a/nutrics.html
+++ b/nutrics.html
@@ -145,13 +145,13 @@
     <!-- <div class="card card-body justify-content-between bg-white"> -->
         <div class="row px-2 pt-5">
             <div class="hi2" style="line-height:1">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
-            <h5 class="pt-3"><span class="low">While I write the case study, please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
+            <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
             <h5 class="mt-1"><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence.</h5>
             <h5 class="mt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
 
         </div>
 
-          <span class="btn mr-4"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>This page optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></span>
+          <span class="btn mr-4"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>This page is optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></span>
 
           <a href="nutricsMobile" class="btn btn-light"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#fd6a65"></i>Try on<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
