--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -163,8 +163,8 @@
         </div>
 
 
-        <div class="mx-auto my-0 text-center" style="transform:scale(.7)">
-          <iframe width="375" height="812" src="https://xd.adobe.com/embed/db079dfe-9ec3-426c-5dd6-7855879b993f-ad36/" frameborder="0"></iframe>
+        <div class="mx-auto my-0 device-iphone-x text-center" style="transform:scale(.7)">
+          <iframe class="device-content" width="375" height="812" src="https://xd.adobe.com/embed/db079dfe-9ec3-426c-5dd6-7855879b993f-ad36/" frameborder="0"style="box-shadow: 0px 0px 10px grey;"></iframe>
         </div>
 
 
