--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -156,7 +156,7 @@
           <a class="btn mr-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733"></i>This page is optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
 
-          <a href="nutrics" class="btn btn-lightG"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try it on<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></a>
+          <a href="nutrics" class="btn btn-lightG"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try it for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i></a>
 
 
 
