--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -153,14 +153,16 @@
               <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
           </div>
 
-          <a class="btn mr-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733"></i>This page is optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
+          <div class="row">
+            <a class="btn mr-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733"></i>This page is optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
+          </div>
 
-          <a href="nutrics" class="btn btn-lightG" style="color:#495057"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try it for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></a>
+          <div class="row pt-1">
+            <a href="nutrics" class="btn btn-lightG" style="color:#495057"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try it for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></a>
+          </div>
 
-
-
-        </div>
+          </div>
 
 
         <div class="mx-auto my-0 device-iphone-x text-center" style="transform:scale(.7)">
@@ -169,8 +171,8 @@
 
 
         <div class="row px-2">
-            <h5 class="mt-1"><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence.</h5>
-            <h5 class="mt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
+            <h5><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence.</h5>
+            <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
             <!-- <p><span class="low">Chrome on web is recommended. Safari will catch up eventually.</p> -->
 
         </div>
