--- a/nutrics.html
+++ b/nutrics.html
@@ -151,11 +151,11 @@
 
         </div>
 
-          <div class="row pt-2">
+          <div class="row pt-2 pl-2 col-auto">
             <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>This page is optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
             </div>
 
-            <div class="row pt-1">
+            <div class="row pt-1 pl-2 col-auto">
               <a href="nutricsMobile" class="btn btn-light" style="color:#495057"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733; border-color:green"></i>Try it for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
             </div>
 
