--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -153,12 +153,12 @@
               <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> of my thesis below.</h5>
           </div>
 
-          <div class="row">
+          <div class="row pl-2 col-auto">
             <a class="btn mr-4"><i class="fas fa-exclamation-circle fa-lg pr-2" style="color:#feb733"></i>This page is optimized for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
 
           </div>
 
-          <div class="row pt-1">
+          <div class="row pt-1 pl-2 col-auto">
             <a href="nutrics" class="btn btn-lightG" style="color:#495057"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Try it for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></a>
           </div>
 
