navbar hide & phone scale change

--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -100,7 +100,7 @@
 
 
     <div class="navbar-container">
-      <nav class="navbar navbar-expand-lg justify-content-between navbar-light border-bottom-0 pl-1" style="background-color:#f7f7f7; opacity:0.9;" data-sticky="top">
+      <nav class="navbar navbar-expand-lg justify-content-between navbar-light border-bottom-0 pl-1" style="background-color:#f7f7f7; opacity:0.9;" >
         <div class="container">
           <div class="col-5 px-0 d-flex justify-content-between">
               <a href="/" aria-expanded="false" aria-haspopup="true" class="nav-link" style="color:#0063b3">Ryan Bolick</a>
@@ -165,12 +165,12 @@
           </div>
 
 
-        <div class="mx-auto my-0 device-iphone-x text-center" style="transform:scale(.7)">
+        <div class="mx-auto my-0 device-iphone-x text-left mt-5" style="transform:scale(.85)">
           <iframe class="device-content" width="375" height="812" src="https://xd.adobe.com/embed/db079dfe-9ec3-426c-5dd6-7855879b993f-ad36/" frameborder="0"style="box-shadow: 0px 0px 10px grey;"></iframe>
         </div>
 
 
-        <div class="row px-2">
+        <div class="row px-2 mt-2">
             <h5><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence.</h5>
             <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" style="color:#012169">Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank" style="color:#012169;">Center for Advanced Hindsight</a>. Coming to your app store soon!</h5>
             <!-- <p><span class="low">Chrome on web is recommended. Safari will catch up eventually.</p> -->
