--- a/about.html
+++ b/about.html
@@ -111,20 +111,6 @@
               </div>
             </div>
 
-            <div class="row col mb-6 justify-content-left mt-3">
-            <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-primary" style="background-color:#0066b3; border-color:#0066b3">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="injected-svg icon" data-src="assets/img/icons/theme/general/heart.svg">
-                <title>View Resume</title>
-                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <polygon points="0 0 24 0 24 24 0 24" opacity="0"></polygon>
-                        <path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"></path>
-                        <rect fill="#000000" x="6" y="11" width="9" height="2" rx="1"></rect>
-                        <rect fill="#000000" x="6" y="15" width="5" height="2" rx="1"></rect>
-                    </g>
-                </svg>
-              <span>View Resume</span>
-            </a>
-            </div>
           </div>
 
           <div class="col-md-5 col-xl-4 mt-4 mb-md-0">
@@ -288,6 +274,14 @@
       </div>
 </section>
 
+<section class="containernarrow">
+  <div class="row col mb-6 justify-content-left mt-3">
+  <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-outline-primary">
+      <span>View Resume</span>
+    </a>
+  </div>
+</section>
+
 
     <section class="containernarrow px-2">
         <div class="row mb-4" data-aos="fade-up" data-aos-delay="NaN">
@@ -354,6 +348,7 @@
             </div>
           </div>
         </div>
+
 
     </section>
 
